--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:postgresql://bh-alexey:5432/postgres
+spring.datasource.username=bh-alexey
+spring.datasource.password=Vrndavan
 
+spring.datasource.driverClassName=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.show_sql=true
